--- a/devcontainer.json
+++ b/devcontainer.json
@@ -1,4 +1,7 @@
 {
   "name": "Codespaces Environment",
-  "image": "mcr.microsoft.com/vscode/devcontainers/base:ubuntu"
+  "image": "mcr.microsoft.com/vscode/devcontainers/universal:latest",
+
+  "remoteUser": "codespace",
+  "overrideCommand": false
 }
